--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds004141.git
+	datalad-id = e96bc1cc-f49d-48ff-a3bd-23e671b8c3e6
+	datalad-url = https://github.com/OpenNeuroDatasets/ds004141.git
