[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds004141.git
 	datalad-id = e96bc1cc-f49d-48ff-a3bd-23e671b8c3e6
-	datalad-url = https://github.com/OpenNeuroDatasets/ds004141.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds004141
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
